# CsvDataAnalysis

./: CMakeLists.txt  README.md
data/: employees.csv
src/: CSVParser.cpp  CSVParser.h  Column.h  DataFrame.cpp  DataFrame.h  Printer.cpp  Printer.h  QueryEngine.cpp  QueryEngine.h  Row.cpp  Row.h  main.cpp
